# DevDeck

./: .gitignore  AGENTS.md  AGETNT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.claude/: settings.json
.claude/agents/: ipc-contract-reviewer.md
.claude/hooks/: cargo-fmt.ps1  guard-secrets.ps1
.github/workflows/: ci.yml  release.yml
.zed/: debug.json
crates/azdo-client/: Cargo.toml
crates/azdo-client/src/: auth.rs  client.rs  code_search.rs  error.rs  git.rs  identity.rs  iterations.rs  lib.rs  pipelines.rs  pr_review.rs  pr_status.rs  wiki.rs  work_items.rs
crates/azdo-client/src/client/: helpers.rs  mod.rs  requests.rs  tests.rs
crates/azdo-client/src/git/: async_ref_ops.rs  branch_mutations.rs  mod.rs  requests.rs  tests_async_ref_ops.rs  tests_branch_stats.rs  tests_commits.rs  tests_pull_requests.rs  tests_pull_requests_paging.rs  types.rs
crates/azdo-client/src/identity/: helpers.rs  mod.rs  requests.rs  tests.rs  types.rs
crates/azdo-client/src/pipelines/: mod.rs  requests.rs  tests.rs  types.rs
crates/azdo-client/src/pr_review/: mod.rs  requests.rs  types.rs
crates/azdo-client/src/pr_review/tests/: item_content.rs  labels.rs  mod.rs  pr_ops.rs  threads.rs
crates/azdo-client/src/work_items/: comments.rs  mod.rs  requests.rs  tests_a.rs  tests_b.rs  tests_c.rs  types.rs
crates/github-client/: Cargo.toml
crates/github-client/src/: client.rs  code.rs  commits.rs  error.rs  issues.rs  lib.rs  models.rs  pull_requests.rs  pulls.rs
docs/: auto-update.md  demo-harness.md  e2e-agent-ui-checks.md  product-improvement-ideas.md  spec-commit-search.md  spec-cross-cutting-efficiency.md  spec-ideas-market-research.md  spec-keyboard-ux.md  spec-navigation.md  spec-overview.md  spec-pr-review-grid.md  spec-pr-review.md  spec-reliability-foundation.md
docs/codex-handoffs/: M0_codex-handoff.md  M1_codex-handoff.md  M2_codex-handoff.md  M2_plan.md  M3_codex-handoff.md  M4_codex-handoff.md  M5_codex-handoff.md  M5_result-actions_codex-handoff.md  M6_azure-cli-auth-handoff.md  M6_retry-handoff.md  M6_tracing-handoff.md  README.md  ROADMAP.md
docs/design/: 01-tech-stack.md  02-architecture.md  03-data-flow.md  04-data-and-sync.md  05-provider-abstraction-and-github-mode.md  README.md
public/: help.html
scripts/: release.ps1
src/: App.commits.test.tsx  App.layout.test.tsx  App.navigation.test.tsx  App.notifications.test.tsx  App.pullRequests.test.tsx  App.reviews.test.tsx  App.settings.test.tsx  App.setup.test.tsx  App.sync.test.tsx  App.test.tsx  App.tsx  App.workItems.test.tsx  App.workItemsExtra.test.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  auth.rs  cancellation.rs  code_browse.rs  code_search.rs  commits.rs  daily_summary.rs  db.rs  diagnostics.rs  error.rs  lib.rs  main.rs  orgs.rs  pipelines.rs  pr_review.rs  projects.rs  prs.rs  search.rs  secrets.rs  settings.rs  snooze.rs  sync.rs  tray.rs  wiki.rs  work_items.rs
src-tauri/src/code_browse/: compare.rs  mod.rs  tests_branch_summaries.rs  util.rs
src-tauri/src/commands/: code.rs  commits.rs  mod.rs  notifications.rs  orgs.rs  pipelines.rs  pr_review.rs  prs.rs  search.rs  settings.rs  snooze.rs  sync.rs  wiki.rs  work_items.rs
src-tauri/src/commits/: avatar.rs  graph.rs  helpers.rs  linked_work_items.rs  mod.rs  mutations.rs  pull_requests.rs  refs.rs  service.rs  sync.rs  tests.rs  tests_mutations.rs  types.rs
src-tauri/src/db/: commits.rs  commits_query.rs  migrate.rs  mod.rs  notifications.rs  organizations.rs  prs.rs  settings.rs  snooze.rs  sync_state.rs  test_support.rs  tests_commits.rs  tests_migrations.rs  tests_misc.rs  tests_notifications.rs  tests_prs.rs  tests_work_item_follows.rs  tests_work_items.rs  util.rs  work_item_follows.rs  work_items.rs  work_items_query.rs
src-tauri/src/db/migrate/: versions_1_6.rs  versions_7_19.rs
src-tauri/src/github/: code.rs  commits.rs  mod.rs  pr_review.rs  prs.rs  work_items.rs
src-tauri/src/github/pr_review/: mutations.rs
src-tauri/src/pipelines/: convert.rs  definition_update.rs  mod.rs  service.rs  types.rs
src-tauri/src/pr_review/: helpers.rs  mod.rs  mutations.rs  service.rs  tests.rs  types.rs
src-tauri/src/providers/: azdo.rs  github.rs  mod.rs
src-tauri/src/prs/: mod.rs  notifications.rs  search.rs  service.rs  sync.rs  sync_fetch.rs  tests.rs  tests_create_pr.rs  types.rs  util.rs
src-tauri/src/sync/: mod.rs  notifications.rs  org.rs  runner.rs  tests.rs
src-tauri/src/work_items/: candidates.rs  conversions.rs  follows.rs  metadata.rs  mod.rs  mutations.rs  query.rs  sync.rs  tests.rs  types.rs
src-tauri/src/work_items/candidates/: assignee.rs  identity.rs  mention.rs  mod.rs  service.rs
src-tauri/src/work_items/conversions/: fields.rs  filters.rs  media.rs  mod.rs  relations.rs  summaries.rs
src-tauri/src/work_items/mutations/: comments.rs  create.rs  mod.rs
src-tauri/src/work_items/tests/: authenticated_user.rs  candidates.rs  conversions.rs  mod.rs  mutations.rs  sync.rs
src/app/: AppContent.tsx  AppHeader.tsx  AppSidebar.tsx  appHelpers.ts  lazyViews.ts  types.ts  useCommandActions.ts  useKeybindings.ts  useKeyboardShortcuts.ts  useNotificationEvents.ts  usePaletteSearch.ts  useSyncManager.ts
src/components/: ActiveFilters.tsx  AppErrorBoundary.tsx  ColumnFilterDropdown.tsx  ColumnVisibilityMenu.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DiffLineText.tsx  DiffView.tsx  FileDiffView.tsx  FilterAutocomplete.test.ts  FilterAutocomplete.tsx  HelpDialog.tsx  MultiSelectFilter.tsx  Nav.test.tsx  Nav.tsx  ResizeHandle.tsx  RowShortcutHints.test.tsx  RowShortcutHints.tsx  SavedSearchBar.tsx  ShortcutHint.tsx  SnoozeMenu.test.tsx  SnoozeMenu.tsx  SnoozedItemsPanel.tsx  SortHeaderButton.tsx  StarButton.tsx  StateDisplay.test.tsx  (+2 more)
(+387 files in other folders)
