[workspace]
resolver = "2"
members = ["src-tauri", "crates/azdo-client"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["AzDoDeck contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
