[workspace]
resolver = "2"
members = ["src-tauri", "crates/azdo-client"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["AzDoDeck contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "gzip"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "1"
anyhow = "1"
tracing = "0.1"

# Release profile tuned for desktop startup: a smaller, fully optimized binary
# loads and launches faster. Workspace-level so it applies to the whole build
# (profile settings in member crates are ignored in a workspace).
[profile.release]
opt-level = "s"   # optimize for size; the app is I/O bound, so smaller wins
lto = true        # cross-crate inlining + dead-code elimination
codegen-units = 1 # maximize optimization at the cost of compile time
panic = "abort"   # drop unwinding tables (the startup panic hook still runs)
strip = true      # remove debug symbols from the shipped binary
