[package]
name = "azdo-dashboard"
version = "0.1.0"
description = "AzDoDeck — Azure DevOps desktop dashboard"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "azdo_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["windows-native"] }
azdo-client = { path = "../crates/azdo-client" }

[dev-dependencies]
tempfile = "3"
