[package]
name = "azdo-dashboard"
version = "0.1.7"
description = "AzDoDeck — Azure DevOps desktop dashboard"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "azdo_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled-full"] }
keyring = { version = "3", features = ["windows-native"] }
azdo-client = { path = "../crates/azdo-client" }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
url = { workspace = true }
wiremock = "0.6"
