[package]
name = "github-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "GitHub REST client for DevDeck"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = "0.6"
